docker config and updates

--- a/backend/LibraryApi/LibraryApi.csproj
+++ b/backend/LibraryApi/LibraryApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>6551d5ac-3c74-4e97-8ca4-a49549392972</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
